<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    <data>-->

    <!--    </data>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        tools:context=".ui.addgoods.AddGoodsFragment">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/toolbarDetails"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/title"
                    android:textColor="#fff"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_below="@+id/toolbarDetails"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_middle"
                        android:visibility="visible"
                        app:cardCornerRadius="3dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/spacing_mlarge">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:text="@string/sealing"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textColor="#3e4a59"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/trader_name"
                                android:textSize="@dimen/_14sdp"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/rel"
                                android:layout_marginTop="@dimen/_20sdp"
                                android:id="@+id/rel2"
                                android:background="@drawable/bcspinner"
                                android:orientation="horizontal">
                                <com.elshader.utils.CustomSearchableSpinner
                                    android:id="@+id/Traders_Spinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_40sdp"
                                    android:spinnerMode="dialog"
                                    app:backgroundTint="#707070">


                                </com.elshader.utils.CustomSearchableSpinner>
                            </RelativeLayout>
                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/boxes_count"
                                android:textSize="@dimen/_14sdp"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_marginLeft="-4dp"
                                app:boxBackgroundColor="@color/grey_40"
                                app:errorEnabled="true"
                                android:id="@+id/T_BoxesCount"
                                android:layout_marginRight="-4dp"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:inputType="text"
                                    android:maxLength="50"
                                    android:textColor="@color/blue_600"
                                    android:textStyle="bold"
                                    android:singleLine="true"
                                    android:maxLines="1"

                                    />

                            </com.google.android.material.textfield.TextInputLayout>


                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

                            <TextView
                                android:textSize="@dimen/_14sdp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/boxe_price"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_marginLeft="-4dp"
                                app:boxBackgroundColor="@color/grey_40"
                                app:errorEnabled="true"
                                android:id="@+id/T_Phone"
                                android:layout_marginRight="-4dp"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="-4dp"
                                    android:layout_marginRight="-4dp"

                                    android:inputType="number"
                                    android:maxLength="50"
                                    android:id="@+id/E_Phone"
                                    android:maxLines="1"

                                    android:singleLine="true"
                                    android:textColor="@color/blue_600"
                                    android:textStyle="bold"
                                    android:backgroundTint="@color/grey_40" />
                            </com.google.android.material.textfield.TextInputLayout>
                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_paid"
                                android:textSize="@dimen/_14sdp"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_marginLeft="-4dp"
                                app:boxBackgroundColor="@color/grey_40"
                                app:errorEnabled="true"
                                android:id="@+id/T_TotalPaid"
                                android:layout_marginRight="-4dp"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:inputType="text"
                                    android:maxLength="50"
                                    android:textColor="@color/blue_600"
                                    android:textStyle="bold"
                                    android:singleLine="true"
                                    android:maxLines="1"

                                    />

                            </com.google.android.material.textfield.TextInputLayout>


                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bets"
                                android:textSize="@dimen/_14sdp"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_marginLeft="-4dp"
                                app:boxBackgroundColor="@color/grey_40"
                                app:errorEnabled="true"
                                android:id="@+id/T_Bets"
                                android:layout_marginRight="-4dp"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:inputType="text"
                                    android:maxLength="50"
                                    android:textColor="@color/blue_600"
                                    android:textStyle="bold"
                                    android:singleLine="true"
                                    android:maxLines="1"

                                    />

                            </com.google.android.material.textfield.TextInputLayout>


                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <Button
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:id="@+id/Btn_login"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/btn_rounded_primary"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_17sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>

                <ProgressBar
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:id="@+id/Progress" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>