<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
     
        <variable
            name="viewmodel"
            type="com.elshader.ui.auth.LoginViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Rela_Login"
        android:background="#ffffff">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <View
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="#ffffff" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/spacing_mlarge"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:src="@drawable/bc_login" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_middle"
                        android:visibility="visible"
                        app:cardCornerRadius="3dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/spacing_mlarge">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/spacing_xlarge"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:text="@string/login"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textColor="#3e4a59"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewmodel.email}"
                                android:layout_marginLeft="-4dp"
                                android:layout_marginRight="-4dp"
                                android:inputType="text"
                                android:maxLength="50"
                                android:id="@+id/E_Email"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/blue_600"
                                android:textStyle="bold"
                                android:backgroundTint="@color/grey_40" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pass"
                                android:textAlignment="center"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-4dp"
                                android:layout_marginRight="-4dp"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:id="@+id/E_Password"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/blue_600"
                                android:textStyle="bold"
                                android:backgroundTint="@color/grey_40"/>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mlarge" />




                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <Button
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:id="@+id/Btn_login"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/btn_rounded_primary"
                        android:text="@string/sign_in"
                        android:onClick="@{viewmodel.onClickLogin}"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</layout>